<resources>
    <string name="app_name">ToDoApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_title">Task Title</string>
    <string name="time">Time</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="pending">Pending</string>
    <string name="warning">Warning</string>
    <string name="do_you_want_to_delete">Do you want to delete, this action can\'t be undone.</string>
    <string name="ok">OK</string>
    <string name="date">Date</string>
    <string name="task_list">Task List</string>
    <string name="add_a_task">Add a task</string>
</resources>